Enable preview for test